# reddit-confessions-gen

./: .gitignore  pyproject.toml  train.py
src/: config.py  data.py  trainer.py
src/model/: transformer.py  util.py
